# mxe

./: .gitignore  CMakeLists.txt  README.md
cmake/: DeployVST3.cmake
cmake/apple-sdk-shims/Foundation/: NSGarbageCollector.h
gui-memory/: README.md  design-system.md  interactions.md  parameter-language.md  porting-checklist.md  source-map.md  tokens.json
jsfx/: V3.jsfx  mon.jsfx
releases/V01.01/: readme.md
resources/: about.md
sdk-shims/Foundation/: NSGarbageCollector.h
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/dsp/: DspCore.cpp  DspCore.h  MultibandCrossover.h
source/editor/: EditorControls.cpp  EditorPages.cpp  EditorPrompts.cpp  EditorSection.cpp  EditorTheme.cpp  HostParameterEditing.cpp  PluginEditor.cpp
source/headers/: DspCore.h  EditorControlSpecs.h  EditorControls.h  EditorPages.h  EditorPrompts.h  EditorSection.h  EditorTheme.h  EditorUiState.h  MultibandProcessor.h  ParameterIds.h  PluginEditor.h  PluginParameters.h  PluginProcessor.h  ValueFormatting.h
source/processor/: DspCore.cpp  DspCoreProcessing.cpp  DspCoreState.cpp  MultibandProcessor.cpp  ParameterIds.cpp  PluginParameters.cpp  PluginProcessor.cpp  PluginProcessorParameters.cpp
src/: PluginEditor.cpp
src/dsp/: MultibandCrossover.cpp  MultibandProcessor.cpp  MultibandProcessor.h
tmp/: reaper_fx_probe.txt  reaper_jsfx_params.txt
tmp/param_sweep/: summary.txt
tmp/param_sweep/cases/DMbypass_max/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/DMbypass_min/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/FFRelease_max/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/FFRelease_min/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/FFTension_max/: alignment_stats.txt  jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/FFTension_min/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/FFbypass_max/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/FFbypass_min/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/LLRelease_max/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/LLRelease_min/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/LLTension_max/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/LLTension_min/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/LLThResh_max/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/LLThResh_min/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/LLmk_max/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/LLmk_min/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/RRRelease_max/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/RRRelease_min/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/RRTension_max/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/RRTension_min/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/RRThResh_max/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/RRThResh_min/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/RRmk_max/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/RRmk_min/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/TensionFlooR_max/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/TensionFlooR_min/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/TensionHysT_max/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/TensionHysT_min/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/delTa_max/: alignment_stats.txt  jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/delTa_min/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/hwBypass_max/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/hwBypass_min/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/inGn_max/: alignment_stats.txt  jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/inGn_min/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/mkLD_max/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/mkLD_min/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/mkLU_max/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/mkLU_min/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/mkRD_max/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  null_stats.txt
tmp/param_sweep/cases/mkRD_min/: jsfx.rpp  jsfx.txt  jsfx_render_stats.txt  (+1 more)
tmp/parity_default/: alignment_stats.txt  jsfx_default.rpp  jsfx_default.txt  jsfx_default_render_stats.txt  null_stats.txt
tmp/parity_smoke/: smoke_jsfx.rpp  smoke_jsfx.txt  smoke_jsfx_render_stats.txt
tmp/parity_suite/: summary.txt
tmp/parity_suite_smoke/: jsfx_smoke.rpp  jsfx_smoke.txt  jsfx_smoke_render_stats.txt
tmp/pdc_check/: jsfx_pdc.rpp  jsfx_pdc.txt  jsfx_pdc_null.txt  jsfx_pdc_render_stats.txt  vst3_pdc.rpp  vst3_pdc.txt  vst3_pdc_null.txt  vst3_pdc_render_stats.txt
tools/: analyze_parity.py  build_reaper_render_project.lua  mx6_multiband_sanity.cpp  mx6_raw_render.cpp  reaper_dump_fx_params.lua  reaper_fx_probe.lua  render_reaper_fx.lua  render_reaper_fx.sh  run_reaper_param_sweep.sh  run_reaper_parity_default.sh  run_reaper_parity_suite.sh
(+91 files in other folders)
